Regular menu on small device & Fixed Navigation on scroll

--- a/src/sass/6-theme/_6-theme.scss
+++ b/src/sass/6-theme/_6-theme.scss
@@ -36,7 +36,11 @@
     margin: 1rem 0;
     background: $theme-color;
 }
-/* 6.8 Margin X Y 50% */
-.t-my {
-    margin: 50% 0;
+// /* 6.8 Margin X Y 50% */
+// // .t-my {
+// //     transform: translateY(-50%);
+// // }
+.emni {
+    margin: 100% 0;
+    transform: translateY(-50%);
 }
